--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "react": "^17.0.1",
+    "react-codepen-embed": "^1.0.2",
     "react-dom": "^17.0.1",
     "react-download-link": "^2.3.0",
     "react-icons": "^4.1.0",
